@@ -1,3 +1,7 @@
+=== HEAD
+
+* Add :from=>:values option to validation_helpers methods, for getting values from the values hash instead of a method call (jeremyevans)
+
 === 4.23.0 (2015-06-01)
 
 * Make dataset.call_sproc(:insert) work in the jdbc adapter (flash-gordon) (#1013)
